fixed spacing

--- a/css/services.css
+++ b/css/services.css
@@ -6,6 +6,10 @@
 <---          TEMPLATE          -->
 <--- -------------------------- -*/
 
+#web-dev {
+    margin-top: 50px;
+}
+
 .template img {
     width: 100%;
 }
